Enhancements to the diagrams