@@ -1,9 +1,11 @@
 package com.coralcea.jasper.tools.dta;
 
+import java.io.File;
+import java.net.URI;
 import java.net.URL;
 import java.util.ArrayList;
 import java.util.Collection;
-import java.util.HashSet;
+import java.util.Collections;
 import java.util.Iterator;
 import java.util.LinkedHashSet;
 import java.util.List;
@@ -12,8 +14,11 @@ import java.util.TreeMap;
 import java.util.UUID;
 
 import org.apache.xerces.util.XMLChar;
+import org.eclipse.core.resources.IFile;
+import org.eclipse.core.resources.IMarker;
 import org.eclipse.core.resources.IProject;
 import org.eclipse.core.resources.IProjectDescription;
+import org.eclipse.core.resources.IResource;
 import org.eclipse.core.runtime.CoreException;
 
 import com.coralcea.jasper.tools.Activator;
@@ -32,6 +37,7 @@ import com.hp.hpl.jena.rdf.model.Resource;
 import com.hp.hpl.jena.rdf.model.Statement;
 import com.hp.hpl.jena.rdf.model.StmtIterator;
 import com.hp.hpl.jena.rdf.model.impl.ResIteratorImpl;
+import com.hp.hpl.jena.rdf.model.impl.StmtIteratorImpl;
 import com.hp.hpl.jena.vocabulary.OWL;
 import com.hp.hpl.jena.vocabulary.RDF;
 import com.hp.hpl.jena.vocabulary.RDFS;
@@ -47,6 +53,8 @@ public class DTAUtilities {
 		Resource resource = (Resource) node;
 		if (XSD.getURI().equals(resource.getNameSpace()))
 			return "xsd:"+resource.getLocalName();
+		if (RDFS.Literal.equals(resource))
+			return "rdfs:Literal";
 		if (resource.getModel()==null)
 			return resource.getLocalName();
 		if (resource.getModel().getNsURIPrefix(resource.getNameSpace()) != null)
@@ -55,57 +63,67 @@ public class DTAUtilities {
 	}
 
 	public static ResIterator listDefinedResources(Ontology ontology, Resource type) {
-		return filterIfDefinedBy(getDefiningModel(ontology), ontology.getOntModel().listIndividuals(type));
+		return filterIfDefinedByBase(getDefiningModel(ontology), ontology.getOntModel().listIndividuals(type));
 	}
 
 	public static ResIterator listDefinedClasses(Ontology ontology) {
-		return filterIfDefinedBy(getDefiningModel(ontology), listClasses(ontology.getOntModel()).iterator());
+		return filterIfDefinedByBase(getDefiningModel(ontology), listClasses(ontology.getOntModel()).iterator());
 	}
 
 	public static ResIterator listDefinedProperties(Ontology ontology) {
-		return filterIfDefinedBy(getDefiningModel(ontology), listProperties(ontology.getOntModel()).iterator());
+		return filterIfDefinedByBase(getDefiningModel(ontology), listProperties(ontology.getOntModel()).iterator());
 	}
 
 	public static List<OntClass> listClasses(OntModel model) {
 		List<OntClass> classes = new ArrayList<OntClass>();
 		for (Iterator<OntClass> i = model.listClasses(); i.hasNext();) {
 			OntClass c = i.next();
-			if (!c.isRestriction())
+			if (!c.isAnon())
 				classes.add(c);
 		}
 		return classes;
 	}
 
 	public static List<OntProperty> listProperties(OntModel model) {
-		return model.listAllOntProperties().toList();
+		List<OntProperty> properties = new ArrayList<OntProperty>();
+		for (Iterator<OntProperty> i = model.listAllOntProperties(); i.hasNext();) {
+			OntProperty p = i.next();
+			if (isProperty(p))
+				properties.add(p);
+		}
+		return properties;
 	}
 
-	public static Set<OntProperty> getDeclaredProperties(Resource element) {
-		HashSet<OntProperty> properties = new LinkedHashSet<OntProperty>();
-        for (Resource p : listSubjects(RDFS.domain, element))
-        	properties.add(p.as(OntProperty.class));
+	public static List<Resource> listResourcesOfType(OntModel model, Resource type) {
+		return model.listResourcesWithProperty(RDF.type, type).toList();
+	}
+
+	public static Set<OntProperty> listDeclaredProperties(Resource type) {
+		Set<OntProperty> properties = new LinkedHashSet<OntProperty>();
+        for (Resource p : listSubjects(RDFS.domain, type))
+        	if (isProperty(p))
+        		properties.add(p.as(OntProperty.class));
 		return properties;
 	}
 	
-	public static Set<OntProperty> getAllProperties(Resource element) {
-		Set<OntProperty> properties = getDeclaredProperties(element);
-        for (RDFNode supertype : listObjects(element, RDFS.subClassOf))
-        	properties.addAll(getDeclaredProperties(supertype.as(OntClass.class)));
+	public static Set<OntProperty> listAllProperties(Resource type) {
+		Set<OntProperty> properties = listDeclaredProperties(type);
+        for (RDFNode supertype : listObjects(type, RDFS.subClassOf))
+        	properties.addAll(listDeclaredProperties(supertype.as(OntClass.class)));
 		return properties;
 	}
 
-	public static Set<OntProperty> getPropertiesTypedBy(Resource element) {
-		HashSet<OntProperty> properties = new LinkedHashSet<OntProperty>();
-        for (Resource p : listSubjects(RDFS.range, element))
-        	properties.add(p.as(OntProperty.class));
+	public static Set<OntProperty> listPropertiesTypedBy(Resource type) {
+		Set<OntProperty> properties = new LinkedHashSet<OntProperty>();
+        for (Resource p : listSubjects(RDFS.range, type))
+        	if (isProperty(p))
+        		properties.add(p.as(OntProperty.class));
 		return properties;
 	}
 
-	public static Set<OntProperty> listInputs(Resource operation) {
-		HashSet<OntProperty> properties = new LinkedHashSet<OntProperty>();
-        for (RDFNode p : listObjects(operation, DTA.input))
-        	properties.add(p.as(OntProperty.class));
-		return properties;
+	public static OntClass getInput(Resource operation) {
+		Resource input = operation.getPropertyResourceValue(DTA.input);
+		return (input!=null) ? input.as(OntClass.class) : null;
 	}
 
 	public static OntProperty getOutput(Resource operation) {
@@ -113,11 +131,24 @@ public class DTAUtilities {
 		return (output!=null) ? output.as(OntProperty.class) : null;
 	}
 
-	public static Set<OntClass> getSelfAndAllSubClasses(Resource element) {
-		Set<OntClass> subclasses = element.as(OntClass.class).listSubClasses().toSet();
-		subclasses.add(element.as(OntClass.class));
+	public static Set<OntClass> listSelfAndAllSubClasses(Resource type) {
+		Set<OntClass> subclasses = type.as(OntClass.class).listSubClasses().toSet();
+		subclasses.add(type.as(OntClass.class));
 	    return subclasses;
 	}
+
+	public static Set<OntClass> listSelfAndAllSuperClasses(Resource type) {
+		Set<OntClass> superclasses = type.as(OntClass.class).listSuperClasses().toSet();
+		superclasses.add(type.as(OntClass.class));
+	    return superclasses;
+	}
+
+	public static <T extends RDFNode> Set<T> listObjects(Resource r, Property p, Class<T> aClass) {
+		Set<T> values = new LinkedHashSet<T>();
+        for (StmtIterator i = r.listProperties(p); i.hasNext(); )
+        	values.add(i.next().getObject().as(aClass));
+        return values;
+    }
 
 	public static Set<RDFNode> listObjects(Resource r, Property p) {
 		Set<RDFNode> values = new LinkedHashSet<RDFNode>();
@@ -126,20 +157,13 @@ public class DTAUtilities {
         return values;
     }
 
-	public static Set<Resource> listResourceObjects(Resource r, Property p) {
-		Set<Resource> values = new LinkedHashSet<Resource>();
-        for (StmtIterator i = r.listProperties(p); i.hasNext(); )
-        	values.add(i.next().getObject().asResource());
+	public static <T extends Resource> Set<T> listSubjects(Property p, Resource r, Class<T> aClass) {
+    	LinkedHashSet<T> values = new LinkedHashSet<T>();
+        for (ResIterator i = r.getModel().listResourcesWithProperty(p, r); i.hasNext();)
+        	values.add(i.next().as(aClass));
         return values;
     }
-
-	public static Set<OntResource> listOntResourceObjects(Resource r, Property p) {
-		Set<OntResource> values = new LinkedHashSet<OntResource>();
-        for (StmtIterator i = r.listProperties(p); i.hasNext(); )
-        	values.add(i.next().getObject().as(OntResource.class));
-        return values;
-    }
-
+	
 	public static Set<Resource> listSubjects(Property p, Resource r) {
     	LinkedHashSet<Resource> values = new LinkedHashSet<Resource>();
         for (ResIterator i = r.getModel().listResourcesWithProperty(p, r); i.hasNext();)
@@ -147,26 +171,38 @@ public class DTAUtilities {
         return values;
     }
 	
-	public static Set<OntResource> listOntResourceSubjects(Property p, Resource r) {
-    	LinkedHashSet<OntResource> values = new LinkedHashSet<OntResource>();
-        for (ResIterator i = r.getModel().listResourcesWithProperty(p, r); i.hasNext();)
-        	values.add(i.next().as(OntResource.class));
-        return values;
-    }
+	public static <T extends Resource> T getPropertyResourceValue(Resource r, Property p, Class<T> aClass) {
+		Resource v = r.getPropertyResourceValue(p);
+		return (v!=null) ? v.as(aClass) : null;
+	}
+
+	public static StmtIterator listStatementsOfPredicates(Model model, Property[] predicates) {
+		List<Statement> statements = new ArrayList<Statement>();
+		for (Property p : predicates)
+			statements.addAll(model.listStatements(null, p, (RDFNode)null).toList());
+		return new StmtIteratorImpl(statements.iterator());
+	}
+	
+	public static StmtIterator listStatementsOfTypes(Model model, Resource[] types) {
+		List<Statement> statements = new ArrayList<Statement>();
+		for (Resource t : types)
+			statements.addAll(model.listStatements(null, RDF.type, t).toList());
+		return new StmtIteratorImpl(statements.iterator());
+	}
 
 	public static Resource getDTA(Resource operation) {
-        for (Resource subject : DTAUtilities.listSubjects(null, operation)) {
+        for (Resource subject : DTAUtilities.listSubjects(null, operation, Resource.class)) {
         	if (isDTA(subject))
         		return subject;
         }
         return null;
     }
 
-    public static <T extends Resource> ResIterator filterIfDefinedBy(OntModel model, Iterator<T> i) {
+    public static <T extends Resource> ResIterator filterIfDefinedByBase(OntModel model, Iterator<T> i) {
 		ArrayList<Resource> children = new ArrayList<Resource>();
 		while (i.hasNext()) {
 			T r = (T) i.next();
-			if (DTAUtilities.isDefinedBy(model, r))
+			if (DTAUtilities.isDefinedByBase(model, r))
 				children.add(r);
 		}
 		return new ResIteratorImpl(children.iterator());
@@ -189,15 +225,15 @@ public class DTAUtilities {
 		return model;
 	}
 	
-	public static Ontology getDefiningOntology(OntResource element) {
-		OntModel model = element.getOntModel();
-		if (isDefinedBy(model, element))
+	public static Ontology getDefiningOntology(OntResource resource) {
+		OntModel model = resource.getOntModel();
+		if (isDefinedByBase(model, resource))
 			return model.listOntologies().next();
 		
-		Iterator<OntModel> imports = element.getOntModel().listSubModels();
+		Iterator<OntModel> imports = resource.getOntModel().listSubModels();
 		while (imports.hasNext()) {
 			OntModel importedModel = imports.next();
-			if (isDefinedBy(importedModel, element)) {
+			if (isDefinedByBase(importedModel, resource)) {
 				Ontology o = importedModel.listOntologies().next();
 				return model.getOntology(o.getURI());
 			}
@@ -206,33 +242,47 @@ public class DTAUtilities {
 		return null;
 	}
 
-	public static boolean isDefinedBy(OntModel model, Resource r) {
+	public static boolean isDefinedByBase(OntModel model, Resource r) {
 		return model.getBaseModel().contains(r, RDF.type);
 	}
 
 	public static boolean isDefinedByBase(OntResource r) {
-		return isDefinedBy(r.getOntModel(), r);
+		return isDefinedByBase(r.getOntModel(), r);
 	}
 	
 	public static boolean isDefinedByBase(OntResource r, Property p, RDFNode v) {
 		return r.getOntModel().getBaseModel().contains(r, p, v);
 	}
 
+	public static boolean isDefinedByBase(OntModel m, Resource r, Property p, RDFNode v) {
+		return m.getBaseModel().contains(r, p, v);
+	}
 
-	public static Collection<Resource> getAvailableTypes(OntModel model) {
+	public static Collection<Resource> listAvailableTypes(OntModel model) {
 		Collection<Resource> types = new ArrayList<Resource>(DTAUtilities.listClasses(model));
 		types.add(XSD.integer);
 		types.add(XSD.decimal);
 		types.add(XSD.xstring);
 		types.add(XSD.xboolean);
 		types.add(XSD.date);
+		types.add(RDFS.Literal);
 		return types;
 	}
 
-	public static Resource getRDFType(Resource r) {
-		return r.getModel() != null ? r.getPropertyResourceValue(RDF.type) : null;
+	public static Set<Resource> listRDFTypes(Resource r) {
+		if (r.getModel() == null)
+			return Collections.emptySet();
+		return listObjects(r, RDF.type, Resource.class);
 	}
 	
+	public static boolean isTypedBy(Resource r, Resource[] types) {
+		Set<Resource> actualTypes = listRDFTypes(r);
+		for (Resource type : types) 
+			if (actualTypes.contains(type))
+				return true;
+		return false;
+	}
+
 	public static boolean isValidURL(String url) {
 		try {
 			new URL(url);
@@ -244,20 +294,32 @@ public class DTAUtilities {
 
 	public static boolean isValidURI(String uri) {
 		try {
-			URL url = new URL(uri);
-			url.toURI();
+			new URI(uri);
 			return XMLChar.isNCName(uri.charAt(uri.length()-1));
 		} catch (Exception e) {
 			return false;
 		}
 	}
 
+	public static boolean isValidFile(String file) {
+		try {
+			return new File(file).exists();
+		} catch (Exception e) {
+			return false;
+		}
+	}
+
 	public static boolean isValidPrefix(String prefix) {
-    	return prefix.length() == 0 || (XMLChar.isValidNCName(prefix) && !prefix.equalsIgnoreCase("base"));
+    	return XMLChar.isValidNCName(prefix) && !prefix.equalsIgnoreCase("base");
     }
 
 	public static boolean isValidNsURI(String uri) {
-    	return uri.length() == 0 || !XMLChar.isNCName(uri.charAt(uri.length()-1)); 
+		try {
+			new URI(uri);
+			return !XMLChar.isNCName(uri.charAt(uri.length()-1));
+		} catch (Exception e) {
+			return false;
+		}
     }
 
 	public static boolean hasNature(IProject project, String nature) {
@@ -273,38 +335,67 @@ public class DTAUtilities {
 	    return false;
 	}
 
-	public static boolean isOntology(Resource res) {
-		Resource type = getRDFType(res);
-		return OWL.Ontology.equals(type);
+	public static boolean isOntology(Resource resource) {
+		Set<Resource> types = listRDFTypes(resource);
+		return types.contains(OWL.Ontology);
 	}
 
-	public static boolean isLibrary(Ontology res) {
-		Literal lib = (Literal) res.getPropertyValue(DTA.isLibrary);
+	public static boolean isLibrary(Ontology resource) {
+		Literal lib = (Literal) resource.getPropertyValue(DTA.isLibrary);
 		return lib!= null && lib.getBoolean();
 	}
 	
-	public static boolean isClass(Resource res) {
-		Resource type = getRDFType(res);
-		return OWL.Class.equals(type) || RDFS.Class.equals(type);
+	public static boolean isClass(Resource resource) {
+		Set<Resource> types = listRDFTypes(resource);
+		return types.contains(OWL.Class) || 
+			   types.contains(RDFS.Class);
 	}
 
-	public static boolean isProperty(Resource res) {
-		Resource type = getRDFType(res);
-		return OWL.ObjectProperty.equals(type) || OWL.DatatypeProperty.equals(type);
+    public static boolean isDatatype(Resource resource) {
+    	return XSD.getURI().equals(resource.getNameSpace()) || 
+    		   RDFS.Literal.equals(resource);
 	}
 
-    public static boolean isOperation(Resource r) {
-    	return DTA.Operation.equals(DTAUtilities.getRDFType(r));
+	public static boolean isCardinality(Resource resource) {
+		Set<Resource> types = listRDFTypes(resource);
+		return types.contains(OWL.minCardinality) || 
+			   types.contains(OWL.maxCardinality) || 
+			   types.contains(OWL.cardinality);
+	}
+
+	public static boolean isProperty(Resource resource) {
+		Set<Resource> types = listRDFTypes(resource);
+		return types.contains(OWL.ObjectProperty) || 
+			   types.contains(OWL.DatatypeProperty) || 
+			   types.contains(RDF.Property);
+	}
+
+    public static boolean isOperation(Resource resource) {
+		Set<Resource> types = listRDFTypes(resource);
+    	return types.contains(DTA.Operation);
     }
 
-    public static boolean isRequest(Resource r) {
-    	return DTA.Request.equals(DTAUtilities.getRDFType(r));
+    public static boolean isRequest(Resource resource) {
+		Set<Resource> types = listRDFTypes(resource);
+    	return types.contains(DTA.Request);
     }
 
-    public static boolean isDTA(Resource res) {
-		Resource type = getRDFType(res);
-		return DTA.DTA.equals(type);
+    public static boolean isDTA(Resource resource) {
+		Set<Resource> types = listRDFTypes(resource);
+    	return types.contains(DTA.DTA);
 	}
+    
+    public static String getKind(Resource resource) {
+    	if (listRDFTypes(resource).isEmpty())
+    		return resource.getLocalName();
+		if (isOntology(resource))
+    		return isLibrary((Ontology)resource) ? "Library" : "Model";
+    	if (isProperty(resource))
+    		return "Property";
+    	if (isClass(resource))
+    		return "Type";
+    	return DTAUtilities.listRDFTypes(resource).iterator().next().getLocalName();
+    }
     
     public static String getUniqueDestination(Resource dta, Resource op) {
 		String s = dta.getLocalName()+"/"+op.getLocalName()+"/"+UUID.randomUUID().toString();
@@ -321,14 +412,14 @@ public class DTAUtilities {
     	return s!=null ? s.getObject().asLiteral().getInt() : 0;
     }
     
-    public static List<Statement> getStatementsOn(Model model, Resource resource) {
+    public static List<Statement> listStatementsOn(Model model, Resource resource) {
     	List<Statement> statements = new ArrayList<Statement>();
 		statements.addAll(model.listStatements(resource, null, (RDFNode)null).toList());
 		statements.addAll(model.listStatements((Resource)null, null, resource).toList());
 		return statements;
     }
     
-    public static Restriction getRestriction(Resource resource, Property kind, Property property) {
+    public static Restriction getDirectRestriction(Resource resource, Property kind, Property property) {
 		for (RDFNode n : DTAUtilities.listObjects(resource, kind)) {
 			if (n.canAs(Restriction.class)) {
 				Restriction r = n.as(Restriction.class);
@@ -336,10 +427,22 @@ public class DTAUtilities {
 					return r;
 			}
 		}
-    	return null;
+		return null;
+    }
+    
+    public static Restriction getRestriction(OntClass resource, Property kind, Property property) {
+		Restriction r = getDirectRestriction(resource, kind, property);
+		if (r==null) {
+			for (OntClass superClass : DTAUtilities.listObjects(resource, RDFS.subClassOf, OntClass.class)) {
+				r = getRestriction(superClass, kind, property);
+				if (r!=null)
+					break;
+			}
+		}
+    	return r;
     }
 
-    public static String getRestrictionValue(Restriction restriction) {
+    public static String getCardinality(Restriction restriction) {
 	    String value = "1..1";
 	    if (restriction == null)
 	    	value = "0..*";
@@ -350,8 +453,44 @@ public class DTAUtilities {
     	return value;
     }
     
+    public static Resource getRestrictedType(Restriction restriction) {
+    	if (restriction!=null && restriction.isAllValuesFromRestriction())
+    		return restriction.asAllValuesFromRestriction().getAllValuesFrom();
+    	return null;
+    }
+
     public static boolean isMultiValued(Resource aClass, Property aProperty, Property kind) {
-    	Restriction restriction = getRestriction(aClass, kind, aProperty);
+    	Restriction restriction = getDirectRestriction(aClass, kind, aProperty);
     	return restriction==null || restriction.isMinCardinalityRestriction();
     }
+
+    public static boolean isGet(Resource operation) {
+    	return DTA.Get.equals(operation.getPropertyResourceValue(DTA.kind)); 
+    }
+
+    public static boolean isPost(Resource operation) {
+    	return DTA.Post.equals(operation.getPropertyResourceValue(DTA.kind)); 
+    }
+    
+    public static boolean isPublish(Resource operation) {
+    	return DTA.Publish.equals(operation.getPropertyResourceValue(DTA.kind)); 
+    }
+
+    public static Set<Property> listAllEquivalentProperties(Property p) {
+    	Set<Property> equivalents = new LinkedHashSet<Property>();
+    	equivalents.addAll(DTAUtilities.listObjects(p, OWL.equivalentProperty, Property.class));
+    	equivalents.addAll(DTAUtilities.listSubjects(OWL.equivalentProperty, p, Property.class));
+    	return equivalents;
+    }
+    
+    public static IMarker[] getMarkers(IFile modelFile, Resource resource) throws CoreException {
+		List<IMarker> markers = new ArrayList<IMarker>();
+    	for (IMarker marker : modelFile.findMarkers(DTA.MARKER, false, IResource.DEPTH_ZERO)) {
+			if (resource.getURI().equals(marker.getAttribute(IMarker.LOCATION))) {
+				markers.add(marker);
+			}
+		}
+    	return markers.toArray(new IMarker[0]);
+    }
+    
 }
